# payment-splitter

./: README.md  README.rst
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: base.py
frontend/: .gitignore  README.md  README.rst  package.json
frontend/public/: manifest.json
frontend/src/: App.js  index.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/auth/: AuthWrapper.jsx  LoginButton.jsx  LogoutButton.jsx  SignInForm.jsx
frontend/src/components/header/: Header.jsx
frontend/src/config/: Auth0Config.js.example
frontend/src/pages/: AddSplit.jsx  Group.jsx  Groups.jsx  Home.jsx  LoginRedirect.jsx  MySplitsPage.jsx  NewSplitPage.jsx
frontend/src/utils/: auth.js
